<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Login progress -->
        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/logo">
            </ImageView>


            <TextView
                android:id="@+id/about_us_tittle"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/about_us"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_us_desc"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/dark_gray"
                android:text="@string/about_us_desc" />

            <TextView
                android:id="@+id/author"
                android:layout_margin="15dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/gray_text"
                android:text="@string/author" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>